--- a/index.html
+++ b/index.html
@@ -2,5 +2,7 @@
   <head></head>
     <body>
       <h1>Sara Nicoly</h1>
+      <hr>
+      <p>Sobre Sara Nicoly, estudante do curso técnico de Devsenvolvimento de Sistemas no campus IFAL Maceió</p>
     </body>
 </html>
