--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
   <head></head>
     <body>
+      <img src="blob:https://web.whatsapp.com/a438e4e0-3407-4fb9-a512-d7e6409c87c6">
       <h1>Sara Nicoly</h1>
       <hr>
-      <p>Sobre Sara Nicoly, estudante do curso técnico de Devsenvolvimento de Sistemas no campus IFAL Maceió</p>
+      <p>Sobre Sara Nicoly, estudante do curso técnico de Devsenvolvimento de Sistemas no campus IFAL Maceió.</p>
     </body>
 </html>
