--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head></head>
     <body>
-      <img src="blob:https://web.whatsapp.com/a438e4e0-3407-4fb9-a512-d7e6409c87c6">
+      <img src="https://web.whatsapp.com/a438e4e0-3407-4fb9-a512-d7e6409c87c6" width="200" height="100" >
       <h1>Sara Nicoly</h1>
       <hr>
       <p>Sobre Sara Nicoly, estudante do curso técnico de Devsenvolvimento de Sistemas no campus IFAL Maceió.</p>
