--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html>
   <head></head>
     <body>
-      <img src="https://web.whatsapp.com/a438e4e0-3407-4fb9-a512-d7e6409c87c6" width="200" height="100" >
+      <img src="https://avatars.githubusercontent.com/u/179853693?s=400&u=d7528de25e48887666392ff0bc35b68574f43642&v=4"> width="200" height="100" >
       <h1>Sara Nicoly</h1>
       <hr>
       <p>Sobre Sara Nicoly, estudante do curso técnico de Devsenvolvimento de Sistemas no campus IFAL Maceió.</p>
+      <href=snsa1@
     </body>
 </html>
