--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head></head>
     <body>
       <img src="https://avatars.githubusercontent.com/u/179853693?s=400&u=d7528de25e48887666392ff0bc35b68574f43642&v=4">
+      <a href="mailto@snsa1.aluno.ifal.edu.br</a>
       <h1>Sara Nicoly</h1>
       <p>Sobre Sara Nicoly, estudante do curso técnico de Devsenvolvimento de Sistemas no campus IFAL Maceió.</p>
     </body>
