--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <body>
       <img src="https://avatars.githubusercontent.com/u/179853693?s=400&u=d7528de25e48887666392ff0bc35b68574f43642&v=4">
       <br>
-      <a href="mailto@snsa1.aluno.ifal.edu.br">Visite meu e-mail</a>
+      <a href="mailto:snsa1@aluno.ifal.edu.br">Visite meu e-mail</a>
       <h1>Sara Nicoly</h1>
       <p>Sobre Sara Nicoly, estudante do curso técnico de Devsenvolvimento de Sistemas no campus IFAL Maceió.</p>
     </body>
