--- a/index.html
+++ b/index.html
@@ -2,9 +2,17 @@
   <head></head>
     <body>
       <img src="https://avatars.githubusercontent.com/u/179853693?s=400&u=d7528de25e48887666392ff0bc35b68574f43642&v=4">
-      <br>
+      <hr>
       <a href="mailto:snsa1@aluno.ifal.edu.br">Visite meu e-mail</a>
+      <hr>
       <h1>Sara Nicoly</h1>
+      <hr>
       <p>Sobre Sara Nicoly, estudante do curso técnico de Devsenvolvimento de Sistemas no campus IFAL Maceió.</p>
+      <hr>
+      <p>Educação: estudante</p>
+      <hr>
+      <p>Experiência Profissional: Programador web</p>
+      <hr>
+      <p>Hbilidades: Edição</p>
     </body>
 </html>
