--- a/formularios-html/formulario.html
+++ b/formularios-html/formulario.html
@@ -10,7 +10,7 @@
     <h1>Formulário de Cadastro</h1>
     <form>
     Nome:
-    <input type="text"
+    <input type="text">
  </form>
 </body>
 </html>
