--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
       <hr>
       <p>Hbilidades: Edição</p>
       <hr>
+      <h2>Projetos de disciplina de PWEB</h2>
+      <ul>
+        <li><a href="formularios-html/formulario.html">Formulário HTML</a></li>
+      </ul>
       <a href="mailto:snsa1@aluno.ifal.edu.br">Visite meu e-mail</a>
     </body>
 </html>
