--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <hr>
       <p>Experiência Profissional: Programador web</p>
       <hr>
-      <p>Hbilidades: Edição</p>
+      <p>Habilidades: Edição</p>
       <hr>
       <h2>Projetos de disciplina de PWEB</h2>
       <ul>
