--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
       <hr>
       <p>Sobre Sara Nicoly, estudante do curso técnico de Devsenvolvimento de Sistemas no campus IFAL Maceió.</p>
       <hr>
-      <p>Educação: estudante</p>
+      <p>Educação: Estudante.</p>
       <hr>
-      <p>Experiência Profissional: Programador web</p>
+      <p>Experiência Profissional: Programador web.</p>
       <hr>
-      <p>Habilidades: Edição</p>
+      <p>Habilidades: Edição.</p>
       <hr>
       <h2>Projetos de disciplina de PWEB</h2>
       <ul>
