--- a/formularios-html/formulario.html
+++ b/formularios-html/formulario.html
@@ -9,9 +9,14 @@
 <body>
     <h1>Formulário de Cadastro</h1>
     <form>
-          Nome: <input type="text">
+       Nome: <input type="text">
+    <br>  
     Senha: <input type="password">
+    <br>
     E-mail: <input type="email">
+<input type="checkbox" name="linguagem"> Javascript
+<input type="checkbox" name="linguagem"> HTML
+<input type="checkbox" name="linguagem"> CSS
  </form>
 </body>
 </html>
