--- a/formularios-html/formulario.html
+++ b/formularios-html/formulario.html
@@ -14,9 +14,20 @@
     Senha: <input type="password">
     <br>
     E-mail: <input type="email">
+    <br>
+    Tecnologias:
 <input type="checkbox" name="linguagem"> Javascript
 <input type="checkbox" name="linguagem"> HTML
 <input type="checkbox" name="linguagem"> CSS
+<br>
+Turno do curso:
+<input type="radio" name="turno">Matutino
+<input type="radio" name="turno">Vespertino
+<input type="radio" name="turno">Noturno
+<br><br>
+<button>Enviar</button>
+<input type="reset" name="Limpar">
+
  </form>
 </body>
 </html>
