--- a/formularios-html/formulario.html
+++ b/formularios-html/formulario.html
@@ -24,7 +24,13 @@ Turno do curso:
 <input type="radio" name="turno">Matutino
 <input type="radio" name="turno">Vespertino
 <input type="radio" name="turno">Noturno
-<br><br>
+<br>
+        <select name="cidade">
+    <option>Maceió</option>
+    <option>Rio Largo</option>
+    <option>Marechal Deodoro</option>
+</select>
+        <br>
 <button>Enviar</button>
 <input type="reset" name="Limpar">
 
